--- a/index.html
+++ b/index.html
@@ -1,188 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Document</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
-      body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        background-color: #be0b0b;
-        overflow: hidden;
-      }
-      #app {
-        max-width: 1200px;
-        min-height: 90vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        position: relative;
-      }
-      .mai {
-        position: absolute;
-        top: 109px;
-        left: -321px;
-        scale: 2;
-      }
-      .dao {
-        position: absolute;
-        top: 100px;
-        left: 740px;
-        transform: scale(-2, 2);
-      }
-      img {
-        display: block;
-        max-width: 220px;
-      }
-      .title {
-        color: #fff;
-        text-align: center;
-        margin-top: 40px;
-      }
-      #image1 {
-      }
-      #image2 {
-        display: none;
-      }
-      button {
-        text-transform: uppercase;
-        padding: 12px 16px;
-        margin-top: 30px;
-        border: none;
-        color: #fff;
-        font-weight: bold;
-        cursor: pointer;
-        box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
-          rgba(0, 0, 0, 0.23) 0px 6px 6px;
-        border-radius: 3px;
-        overflow: hidden;
-      }
-      .content {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-      }
-
-      .btn-block {
-        width: 600px;
-        height: 220px;
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-      }
-
-      .btn1 {
-        background-color: #cba91e;
-      }
-
-      .btn2 {
-        background-color: blue;
-      }
-      /* Popup Styles */
-      .popup {
-        position: fixed;
-        top: 50%;
-        /* left: 50%; */
-        width: 620px;
-        height: 340px;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        color: black;
-        padding: 20px;
-        border-radius: 5px;
-        z-index: 999;
-        opacity: 0;
-        transform: scale(0);
-        transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-      }
-
-      .popup-show {
-        opacity: 1;
-        top: 23%;
-        transform: scale(1);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-      }
-      .thanks-title {
-        font-weight: bold;
-        font-size: 22px;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="app">
-      <img
-        class="mai"
-        src="./assets/imgs/mai-rm.png"
-        alt="mai"
-      />
-      <img
-        class="dao"
-        src="./assets/imgs/dao-rm.png"
-        alt="dao"
-      />
-      <div class="content">
-        <h1 class="title">Tết này lì xì cho tui nhé</h1>
-        <img
-          id="image1"
-          src="./assets/imgs/img1.png"
-          alt="image1"
-        />
-        <img
-          id="image2"
-          src="./assets/imgs/img2.png"
-          alt="image2"
-        />
-      </div>
-
-      <div
-        id="area"
-        class="btn-block"
-      >
-        <button
-          class="btn1"
-          id="noBtn"
-        >
-          Không :)
-        </button>
-        <button
-          class="btn2"
-          id="okBtn"
-        >
-          Nhất chí
-        </button>
-      </div>
-
-      <div
-        id="thankYouPopup"
-        class="popup s"
-      >
-        <img
-          id="image1"
-          src="./assets/imgs/img1.png"
-          alt="image1"
-        />
-        <p class="thanks-title">Cám ơn bạn! Hehe</p>
-        <p>STK đây nha: **********</p>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tết Lì Xì</title>
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Comic Neue', cursive;
+    }
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      background-color: #87CEFA; /* Light blue background */
+      overflow: hidden;
+      min-height: 100vh;
+    }
+    #app {
+      max-width: 1200px;
+      min-height: 90vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      position: relative;
+    }
+    .mai, .dao {
+      position: absolute;
+      display: block;
+      max-width: 220px;
+    }
+    .mai {
+      top: 109px;
+      left: -321px;
+      transform: scale(2);
+    }
+    .dao {
+      top: 100px;
+      left: 740px;
+      transform: scale(-2, 2);
+    }
+    .title {
+      color: #333;
+      text-align: center;
+      margin-top: 40px;
+    }
+    button {
+      text-transform: uppercase;
+      padding: 12px 16px;
+      margin-top: 30px;
+      border: none;
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+      border-radius: 3px;
+      background-color: #4CAF50; /* Green */
+      transition: transform 0.3s ease, background-color 0.3s ease;
+    }
+    button:hover {
+      transform: scale(1.1);
+      background-color: #45a049;
+    }
+    .btn-block {
+      width: 600px;
+      height: 220px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+    }
+    .popup {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      width: 620px;
+      height: 340px;
+      transform: translate(-50%, -50%);
+      background-color: #ffcccb; /* Light red for popup */
+      color: #333;
+      padding: 20px;
+      border-radius: 5px;
+      z-index: 999;
+      opacity: 0;
+      transform: scale(0);
+      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+      display: none; /* Initially hidden */
+    }
+    .popup-show {
+      opacity: 1;
+      transform: scale(1);
+      display: flex;
+    }
+    .thanks-title {
+      font-weight: bold;
+      font-size: 22px;
+    }
+  </style>
+</head>
+<body>
+  <div id="app">
+    <img class="mai" src="./assets/imgs/mai-rm.png" alt="mai" />
+    <img class="dao" src="./assets/imgs/dao-rm.png" alt="dao" />
+    <div class="content">
+      <h1 class="title">Tết này lì xì cho tui nhé</h1>
+      <img id="image1" src="./assets/imgs/img1.png" alt="image1" />
+      <img id="image2" src="./assets/imgs/img2.png" alt="image2" style="display:none;" />
     </div>
-    <script src="./index.js"></script>
-  </body>
+    <div id="area" class="btn-block">
+      <button class="btn1" id="noBtn">Không</button>
+      <button class="btn2" id="okBtn">Nhất chí</button>
+    </div>
+    <div id="thankYouPopup" class="popup">
+      <img id="image3" src="./assets/imgs/img1.png" alt="Thank you image" />
+      <p class="thanks-title">Cám ơn bạn! Hehe</p>
+      <p>STK đây nha: 0501000215200 VCB</p>
+    </div>
+  </div>
+  <script src="./index.js"></script>
+</body>
 </html>
