--- a/index.html
+++ b/index.html
@@ -30,21 +30,6 @@
       flex-direction: column;
       position: relative;
     }
-    .mai, .dao {
-      position: absolute;
-      display: block;
-      max-width: 220px;
-    }
-    .mai {
-      top: 109px;
-      left: -321px;
-      transform: scale(2);
-    }
-    .dao {
-      top: 100px;
-      left: 740px;
-      transform: scale(-2, 2);
-    }
     .title {
       color: #333;
       text-align: center;
@@ -68,11 +53,11 @@
       background-color: #45a049;
     }
     .btn-block {
-      width: 600px;
-      height: 220px;
+      width: auto; /* Adjusted for better layout control */
       display: flex;
-      align-items: flex-start;
-      justify-content: space-between;
+      align-items: center; /* Center buttons horizontally */
+      justify-content: space-between; /* Space between buttons */
+      gap: 10px; /* Add space between the two buttons */
     }
     .popup {
       position: fixed;
@@ -100,20 +85,49 @@
       font-weight: bold;
       font-size: 22px;
     }
+    #image1 {
+      width: 200px; /* Chiều rộng của ảnh */
+      height: auto; /* Điều chỉnh chiều cao tự động để tránh méo ảnh */
+      display: block; /* Đặt ảnh dưới dạng block để margin:auto có thể hoạt động */
+      margin: auto; /* Căn giữa ảnh theo chiều ngang trong container của nó */
+    }
+    #image2 {
+      width: 200px; /* Chiều rộng của ảnh */
+      height: auto; /* Điều chỉnh chiều cao tự động để tránh méo ảnh */
+      display: block; /* Đặt ảnh dưới dạng block để margin:auto có thể hoạt động */
+      margin: auto; /* Căn giữa ảnh theo chiều ngang trong container của nó */
+    }
+    .area-container {
+      position: relative;
+      width: 120%; /* Điều chỉnh theo nhu cầu */
+      max-width: 600px; /* Hoặc giá trị phù hợp với thiết kế của bạn */
+      height: 200px; /* Không chiếm không gian bố cục */
+    }
+    
+    #area {
+      border: 2px dashed #333;
+      position: absolute;
+      top: 0; left: 0; /* Điều chỉnh nếu cần */
+      width: 100%;
+      min-height: 400px; /* Hoặc chiều cao bạn muốn */
+      margin: 20px 0; /* Điều chỉnh để phù hợp */
+      transform: translateY(-200px); /* Nâng 'area' lên 50px */
+    }
+  
   </style>
 </head>
 <body>
   <div id="app">
-    <img class="mai" src="./assets/imgs/mai-rm.png" alt="mai" />
-    <img class="dao" src="./assets/imgs/dao-rm.png" alt="dao" />
     <div class="content">
       <h1 class="title">Tết này lì xì cho tui nhé</h1>
       <img id="image1" src="./assets/imgs/img1.png" alt="image1" />
       <img id="image2" src="./assets/imgs/img2.png" alt="image2" style="display:none;" />
     </div>
-    <div id="area" class="btn-block">
-      <button class="btn1" id="noBtn">Không</button>
-      <button class="btn2" id="okBtn">Nhất chí</button>
+    <div id="areaContainer" class="area-container">
+      <div id="area" class="btn-block">
+        <button class="btn2" id="okBtn">Nhất chí</button>
+        <button class="btn1" id="noBtn">Không</button>
+      </div>
     </div>
     <div id="thankYouPopup" class="popup">
       <img id="image3" src="./assets/imgs/img1.png" alt="Thank you image" />
