--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
     <div id="areaContainer" class="area-container">
       <div id="area" class="btn-block">
-        <button class="btn2" id="okBtn">Nhất chí</button>
+        <button class="btn2" id="okBtn">Oke</button>
         <button class="btn1" id="noBtn">Không</button>
       </div>
     </div>
