--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div id="thankYouPopup" class="popup">
       <img id="image3" src="./assets/imgs/img1.png" alt="Thank you image" />
       <p class="thanks-title">Cám ơn bạn! Hehe</p>
-      <p>STK đây nha: 0501000215200 VCB</p>
+      <p>STK đây nha: <span id="accountNumber" style="cursor: pointer; color: blue; text-decoration: underline;">0501000215200</span> VCB</p>
     </div>
   </div>
   <script src="./index.js"></script>
