--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
     <div id="thankYouPopup" class="popup">
       <img id="image3" src="./assets/imgs/img1.png" alt="Thank you image" />
-      <p class="thanks-title">Cám ơn bạn! Hehe</p>
+      <p class="thanks-title">Cám ơn bạn Hehe</p>
       <p>STK đây nha: 0501000215200 VCB</p>
     </div>
   </div>
