--- a/minhanh.html
+++ b/minhanh.html
@@ -143,7 +143,7 @@
     <div id="thankYouPopup" class="popup">
       <img id="image3" src="./assets/imgs/img1.png" alt="Thank you image" />
       <p class="thanks-title">Cám ơn bạn! Hehe</p>
-      <p>STK đây nha: 0501000215200 VCB</p>
+      <p>STK đây nha: test</p>
     </div>
   </div>
   <script src="./index.js"></script>
