--- a/xuanmi.html
+++ b/xuanmi.html
@@ -149,7 +149,7 @@
     <div id="thankYouPopup" class="popup">
       <img id="image3" src="./assets/imgs/img1.png" alt="Thank you image" />
       <p class="thanks-title">Cám ơn bạn! Hehe</p>
-      <p>Click vào STK để copy nha: <span id="accountNumber" style="color: blue; cursor: pointer; text-decoration: underline;">0501000215200</span> VCB</p>
+      <p>Click vào STK để copy nha: <span id="accountNumber" style="color: blue; cursor: pointer; text-decoration: underline;">0934697600</span> MB</p>
     </div>
   </div>
   <script src="./index.js"></script>
