--- a/minhanh.html
+++ b/minhanh.html
@@ -85,7 +85,13 @@
       transform: translate(-50%, -50%) scale(1); /* Hiển thị popup */
       display: flex; /* Đảm bảo flex layout được kích hoạt */
     }
-    
+    #accountNumber {
+      color: #007bff; /* Màu xanh giống như liên kết */
+      text-decoration: underline; /* Gạch chân giống như liên kết */
+      cursor: pointer; /* Con trỏ chuột như khi di chuột qua liên kết */
+      transition: color 0.3s ease-in-out; /* Hiệu ứng màu sắc khi di chuột qua */
+    }
+  
     
     .thanks-title {
       font-weight: bold;
@@ -143,7 +149,7 @@
     <div id="thankYouPopup" class="popup">
       <img id="image3" src="./assets/imgs/img1.png" alt="Thank you image" />
       <p class="thanks-title">Cám ơn bạn! Hehe</p>
-      <p>STK đây nha: test</p>
+      <p>Click vào STK để copy nha: <span id="accountNumber" style="color: blue; cursor: pointer; text-decoration: underline;">0501000215200</span> VCB</p>
     </div>
   </div>
   <script src="./index.js"></script>
